puliendo datos del pdf

--- a/const.html
+++ b/const.html
@@ -65,7 +65,7 @@
         Que el(la) señor(a) {{this.name}} identificado(a) con cedula de ciudadanía N° {{this.cc}}, se {{this.asset}} vinculado(a)
         con la FUNDACIÓN SOCIAL CRECER, en desarrollo de un convenio suscrito con el I.C.B.F., en la Modalidad {{this.modality}},
         mediante un contrato de {{this.contract}} en el cargo de {{this.cargo}} desde el {{this.timeI}} {{this.timeF}}
-        devengando {{this.honsal}} mensual de {{this.sletras}} ({{this.snumeros}}).  </p>
+        devengando {{this.honsal}} mensual de {{this.sletras}} (${{this.snumeros}}).  </p>
         <p>La Fundación Social Crecer se encuentra ubicada en la carrera 16 No. 16 – 48, barrió La Favorita, localidad de los Mártires.</p>
         <p>Esta certificación se expide a solicitud de la interesada(o) en Bogotá D.C., el {{this.day}} de {{this.month}} del año {{this.year}}.</p>
         <p>Para confirmar esta certificación puedes comunicarse al teléfono: 3187942707 – Coordinación de Talento Humano.</p>
